--- a/agencify-portal/src/components/ClientInformation/ClientInformation.css
+++ b/agencify-portal/src/components/ClientInformation/ClientInformation.css
@@ -2,14 +2,27 @@
   background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
- 
-  margin-bottom: 20px;
+  margin-bottom: 10px; /* Reduced margin between ClientInformation and QuoteDetails */
 }
 
 .client-information h2 {
   color: #333;
   margin-bottom: 10px;
 }
+.add-r {
+  margin-left: 590px;
+  top: 250px; /* Adjust as needed */
+  right: 50px; /* Adjust as needed */
+  width: ; /* Adjust the width */
+  background-color: #d43f3f; /* Button color */
+  color: white; /* Text color */
+  border: none; /* Remove default border */
+  padding: 10px 10px; /* Adjust padding to control height */
+  border-radius: 5px; /* Rounded corners */
+  cursor: pointer; /* Pointer cursor on hover */
+  text-align: center; /* Center text */
+}
+
 
 .client-information p {
   color: #666;
@@ -45,10 +58,9 @@
 
 .custom-select {
   position: relative; 
-  width: 98%;
+  width: 82%;
   max-width: 100%; 
 }
-
 
 .client-input-with-arrow {
   padding: 10px;
@@ -74,14 +86,23 @@
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-  margin-left: 20px; /* Add margin to space the button from the input */
+  margin-left: 20px;
+}
+
+.save-client-btn {
+  margin-left: 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .divider {
   width: 100%;
   height: 2px;
   background-color: #f3e7e7;
-  margin-top: 40px; /* Increased gap above the divider */
-  margin-bottom: 20px; /* Keep or adjust this for space below the divider */
+  margin-top: 20px; /* Reduced top margin to decrease gap */
+  margin-bottom: 10px; /* Reduced bottom margin */
 }
-
