--- a/agencify-portal/src/components/QuoteDetails/QuoteDetails.css
+++ b/agencify-portal/src/components/QuoteDetails/QuoteDetails.css
@@ -107,6 +107,13 @@
   
   margin-bottom: 20px;
 }
+.divider {
+  width: 100%;
+  height: 2px;
+  background-color: #f3e7e7;
+  margin-top: 20px; /* Reduced top margin to decrease gap */
+  margin-bottom: 10px; /* Reduced bottom margin */
+}
 
 /* Responsive layout for smaller screens */
 @media (max-width: 1024px) {
